{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "9c93af6b-afc1-531b-c59d-336ae1921935",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416684166863:vpc/vpc-05550ca68ba305afb",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0db8a697edbd4affd",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-095a90421b68677c3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05550ca68ba305afb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09cc6ababc6566731",
            "owner_id": "416684166863"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB to communicate with ECS tasks",
            "from_port": 3000,
            "id": "sgrule-4089496228",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0897249f3ee336770",
            "security_group_rule_id": "sgr-0a368e627985eca31",
            "self": false,
            "source_security_group_id": "sg-05e3c6b648f5d9193",
            "timeouts": null,
            "to_port": 3000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.alb",
            "module.ecs.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ecs_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ECS tasks to receive traffic from ALB",
            "from_port": 3000,
            "id": "sgrule-2145987785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05e3c6b648f5d9193",
            "security_group_rule_id": "sgr-02f321d00c369f895",
            "self": false,
            "source_security_group_id": "sg-0897249f3ee336770",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.alb",
            "module.ecs.aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:416684166863:loadbalancer/app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc",
            "arn_suffix": "app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "trya-platform-backend-dev-alb-1209860738.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:416684166863:loadbalancer/app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "trya-platform-backend-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0897249f3ee336770"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-086fc061e53c37c3a"
              },
              {
                "subnet_id": "subnet-0bee6b992a1e42a6b"
              },
              {
                "subnet_id": "subnet-0e24669b3bdad590a"
              }
            ],
            "subnets": [
              "subnet-086fc061e53c37c3a",
              "subnet-0bee6b992a1e42a6b",
              "subnet-0e24669b3bdad590a"
            ],
            "tags": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-alb",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-alb",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "vpc_id": "vpc-05550ca68ba305afb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:416684166863:listener/app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc/d0db6ed7a0ba934f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:416684166863:targetgroup/trya-platform-backend-dev-alb-tg/5cee2a45afc661a3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:416684166863:listener/app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc/d0db6ed7a0ba934f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:416684166863:loadbalancer/app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "trya-platform-backend"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:416684166863:targetgroup/trya-platform-backend-dev-alb-tg/5cee2a45afc661a3",
            "arn_suffix": "targetgroup/trya-platform-backend-dev-alb-tg/5cee2a45afc661a3",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:416684166863:targetgroup/trya-platform-backend-dev-alb-tg/5cee2a45afc661a3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:416684166863:loadbalancer/app/trya-platform-backend-dev-alb/a4e8be97c9a2d5bc"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "trya-platform-backend-dev-alb-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-alb-tg",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-alb-tg",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-05550ca68ba305afb"
          },
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416684166863:security-group/sg-0897249f3ee336770",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0897249f3ee336770",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "trya-platform-backend-dev-alb-alb-sg",
            "name_prefix": "",
            "owner_id": "416684166863",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-alb-alb-sg",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-alb-alb-sg",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05550ca68ba305afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:416684166863:security-group/sg-05e3c6b648f5d9193",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e3c6b648f5d9193",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS tasks to receive traffic from ALB",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0897249f3ee336770"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "trya-platform-backend-dev-service-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "416684166863",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-service-ecs-tasks-sg",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "tags_all": {
              "Application": "Trya Platform",
              "CostCenter": "Engineering",
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "trya-platform-backend-dev-service-ecs-tasks-sg",
              "Project": "trya-platform-backend",
              "Team": "Platform"
            },
            "timeouts": null,
            "vpc_id": "vpc-05550ca68ba305afb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnets.public",
            "data.aws_vpc.main",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_listener.https",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.alb"
          ]
        }
      ]
    }
  ]
}